[package]
name = "SimpleGeoServer"
version = "0.1.0"
edition = "2024"

[lib]
name = "simple_geo_server"
path = "src/lib.rs"

[[bin]]
name = "simple-geo-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
geojson = "1"
shapefile = "0.6"
tiff = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
