[package]
name = "simple-geo-server"
authors = ["Craun718 <natsukawa247@outlook.com>"]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A simple HTTP static file server with geospatial tile serving (raster & vector)"
license = "Apache-2.0"
repository = "https://github.com/Craun718/SimpleGeoServer"
readme = "README.md"
homepage = "https://github.com/Craun718/SimpleGeoServer"
keywords = ["geo", "tile", "geotiff", "geojson", "static-file-server"]
categories = ["command-line-utilities", "web-programming::http-server"]
exclude = [".gitignore"]

[lib]
name = "simple_geo_server"
path = "src/lib.rs"

[[bin]]
name = "simple-geo-server"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip", "trace"] }
geojson = "1"
shapefile = "0.8"
tiff = "0.11"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
geo = "0.33"
geo-types = "0.7"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
utoipauto = "0.2"
